--- a/eTools Ultimate/Resources/PatchNotes.resx
+++ b/eTools Ultimate/Resources/PatchNotes.resx
@@ -189,4 +189,77 @@
 }
 </value>
   </data>
+  <data name="Version_0_2_0" xml:space="preserve">
+    <value>{
+  "version": "0.2.0 (Alpha)",
+  "date": "2025-12-09",
+  "developerText": "This update introduces editing of mover drop lists, adds a tool to detect and remove unused assets, and includes several performance improvements along with various fixes.",
+  "categories": {
+    "added": [
+      {
+        "text": "New “Misc” page, allowing detection and removal of unused assets",
+        "type": 0
+      },
+      {
+        "text": "Added a “Models Folder” setting in the configuration page",
+        "type": 0
+      },
+      {
+        "text": "Added a “prop ex file” setting in the “Movers” section of the configuration page",
+        "type": 0
+      },
+      {
+        "text": "Added context menus to copy various elements in the mover, animation, gift box, accessory, and text lists",
+        "type": 0
+      },
+      {
+        "text": "Added a “Drop list” button to display and edit a mover’s drop list",
+        "type": 0
+      },
+      {
+        "text": "Added a logging system to track errors",
+        "type": 0
+      },
+      {
+        "text": "Added various translations",
+        "type": 0
+      }
+    ],
+    "changed": [
+      {
+        "text": "Default paths for prop files (items and movers) are now adapted when using the Florist format",
+        "type": 1
+      }
+    ],
+    "improved": [
+      {
+        "text": "Optimized loading of definitions and strings (up to 15 times faster)",
+        "type": 4
+      }
+    ],
+    "fixed": [
+      {
+        "text": "The update window now correctly applies the selected theme",
+        "type": 3
+      },
+      {
+        "text": "The loading error window now shows an appropriate message when a folder is missing",
+        "type": 3
+      },
+      {
+        "text": "The application no longer closes when an update is declined",
+        "type": 3
+      },
+      {
+        "text": "Fixed a crash occurring when loading gift boxes",
+        "type": 3
+      },
+      {
+        "text": "Fixed various data types to align them with those used by Flyff clients",
+        "type": 3
+      }
+    ]
+  }
+}</value>
+  </data>
 </root>
